fix: attempt to fix #655 (square root line on Firefox Windows)

--- a/css/core.less
+++ b/css/core.less
@@ -550,10 +550,12 @@ body.ML__fonts-loading .ML__base {
             }
 
             &:after {
-                border-bottom-width: 1px;
+                border: 0.02em solid currentColor;
                 content: ' ';
                 display: block;
-                margin-top: -0.1em;
+                margin-top: -0.04em;
+                min-height: 0.04em;
+                background: currentColor;
             }
         }
 
